Added domain model and services

--- a/spring-security-lab3/src/main/resources/templates/navigation.html
+++ b/spring-security-lab3/src/main/resources/templates/navigation.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" rel="stylesheet" media="screen" />
-    <title>Login</title>
+    <title>Time Tracker</title>
 </head>
 <body>
     <div th:fragment="nav">
         <div class="bg-info">
             <ul class="list-inline">
+                <li><a th:href="@{/}" class="btn btn-standard">Home</a></li>
+                <li><a th:href="@{/timesheet}" class="btn btn-standard">Timesheet</a></li>
+                <li><a th:href="@{/projects}" class="btn btn-standard">Projects</a></li>
+                <li><a th:href="@{/users}" class="btn btn-standard">Users</a></li>
                 <li>
                     <form th:action="@{/logout}" method="post">
                         <input type="submit" class="btn btn-link" value="Logout"/>
                     </form>
                 </li>
-                <li><a th:href="@{/}" class="btn btn-standard">Home</a></li>
-                <li><a th:href="@{/admin}" class="btn btn-standard">Admin</a></li>
-                <li><a th:href="@{/audit}" class="btn btn-standard">Auditor</a></li>
             </ul>
         </div>
     </div>
