--- a/spring-security-lab3/src/main/resources/templates/index.html
+++ b/spring-security-lab3/src/main/resources/templates/index.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:include="head :: header"></div>
-    <title>Welcome to Timetracker</title>
+    <title>Welcome to the ToDo tracker</title>
 </head>
 <body>
     <div class="container">
         <div th:include="navigation :: nav"></div>
-        <h1>Welcome to the time tracker application</h1>
+        <h1>Welcome to the ToDo tracker application</h1>
 
         <h2 th:text="${username}"></h2>
     </div>
