--- a/spring-security-lab2/src/main/resources/templates/login.html
+++ b/spring-security-lab2/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
             <label for="password">Password</label>
             <input type="password" name="password" id="password"/>
         </div>
-        <input type="submit" class="btn btn-default" value="Login"/>
+        <input type="submit" class="btn btn-default" value="Login" id="loginButton"/>
     </form>
     </div>
 </body>
