--- a/spring-security-lab3/src/main/resources/templates/categories.html
+++ b/spring-security-lab3/src/main/resources/templates/categories.html
@@ -24,7 +24,7 @@
             </tbody>
         </table>
 
-        <a th:href="@{/addcategory}" class="btn btn-standard" id="newCategoryButton">Add new category</a>
+        <a th:href="@{/addcategory}" class="btn btn-default" id="newCategoryButton">Add new category</a>
 
     </div>
 </body>
