--- a/spring-security-lab3/src/main/resources/templates/todo.html
+++ b/spring-security-lab3/src/main/resources/templates/todo.html
@@ -32,7 +32,7 @@
             </tbody>
         </table>
 
-        <a th:href="@{/addtodo}" class="btn btn-standard" id="newToDoEntryButton">Add new ToDo</a>
+        <a th:href="@{/addtodo}" class="btn btn-default" id="newToDoEntryButton">Add new ToDo</a>
     </div>
 </body>
 </html>
