--- a/spring-security-lab3/src/main/resources/templates/users.html
+++ b/spring-security-lab3/src/main/resources/templates/users.html
@@ -32,7 +32,7 @@
             </tbody>
         </table>
 
-        <a th:href="@{/adduser}" class="btn btn-standard" id="newUserButton">Add new user</a>
+        <a th:href="@{/adduser}" class="btn btn-default" id="newUserButton">Add new user</a>
     </div>
 </body>
 </html>
