--- a/spring-security-lab3/src/main/resources/templates/addcategory.html
+++ b/spring-security-lab3/src/main/resources/templates/addcategory.html
@@ -9,12 +9,15 @@
         <div th:include="navigation :: nav"></div>
         <h1>Add new category</h1>
 
-        <form action="#" th:action="@{/createcategory}" th:object="${category}" method="post" id="createCategoryForm">
+        <form action="#" th:action="@{/createcategory}" th:object="${category}" method="post" id="createCategoryForm" class="form-horizontal">
             <div class="form-group">
                 <label th:for="${#ids.next('name')}">Name</label>
-                <input type="text" th:field="*{name}" id="name"/>
+                <input type="text" th:field="*{name}" class="form-control" id="name"/>
             </div>
-            <input type="submit" value="Submit" id="saveCategoryButton"></input>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default" th:value="Add" id="saveCategoryButton">Add</button>
+                <a th:href="@{/categories}" class="btn btn-default" id="cancelButton">Cancel</a>
+            </div>
         </form>
     </div>
 </body>
