--- a/spring-security-lab3/src/main/resources/templates/adduser.html
+++ b/spring-security-lab3/src/main/resources/templates/adduser.html
@@ -9,28 +9,27 @@
         <div th:include="navigation :: nav"></div>
         <h1>Add new user</h1>
 
-        <form action="#" th:action="@{/createuser}" th:object="${user}" method="post" id="createUserForm">
+        <form action="#" th:action="@{/createuser}" th:object="${user}" method="post" id="createUserForm" class="form-horizontal">
             <div class="form-group">
                 <label th:for="${#ids.next('username')}">Subject</label>
-                <input type="text" th:field="*{username}" id="username"/>
+                <input type="text" class="form-control" th:field="*{username}" id="username"/>
             </div>
             <div class="form-group">
                 <label th:for="${#ids.next('password')}">Password</label>
-                <input type="password" th:field="*{password}" id="password"/>
+                <input type="password" class="form-control" th:field="*{password}" id="password"/>
             </div>
             <div class="form-group">
-                <label th:for="${#ids.next('repeatPassword')}">Start date</label>
-                <input type="date" th:field="*{repeatPassword}" id="repeatPassword"/>
+                <label th:for="${#ids.next('firstName')}">First name</label>
+                <input type="text" class="form-control" th:field="*{firstName}" id="firstname"/>
             </div>
             <div class="form-group">
-                <label th:for="${#ids.next('firstname')}">First name</label>
-                <input type="text" th:field="*{firstname}" id="firstname"/>
+                <label th:for="${#ids.next('lastName')}">Last name</label>
+                <input type="text" class="form-control" th:field="*{lastName}" id="lastname"/>
             </div>
             <div class="form-group">
-                <label th:for="${#ids.next('lastname')}">Last name</label>
-                <input type="text" th:field="*{lastname}" id="lastname"/>
+                <button type="submit" class="btn btn-default" th:value="Add" id="saveUserButton">Add</button>
+                <a th:href="@{/users}" class="btn btn-default" id="cancelButton">Cancel</a>
             </div>
-            <input type="submit" value="Submit" id="saveToDoButton"></input>
         </form>
     </div>
 </body>
