--- a/spring-security-lab3/src/main/resources/templates/login.html
+++ b/spring-security-lab3/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Login</h1>
         <form id="f" th:action="@{/j_spring_security_check}" method="post">
-        <span th:if="${error}">Wrong user name or password</span>
+        <span id="errormsg" th:if="${error}">Wrong user name or password</span>
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" name="username" id="username"/>
